# CS2-Ping-Checker

./: LICENSE  README.md  package-lock.json  package.json  readme.md  web-install.ps1
Release/V0.1/: steam-server-ping-checker_0.1.0_x64_en-US.msi
Release/V1.0/: CS2 Server Ping Checker_1.0.0_x64_en-US.msi
frontend/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  ping.rs
